# BotmarkV1

./: .dockerignore  .gitattributes  CMakeLists.txt  Dockerfile  README.md
cmake/: FindEST.cmake  FindGmapping.cmake  FindPocketsphinx.cmake  FindSphinxbase.cmake
data/facialrecognition/: countandfilter.sh  sorttrainingandtest.sh  testing.csv
data/persontracking/depth/: 1339072456.327275134.pgm  1339072456.357733495.pgm  1339072456.394011561.pgm  1339072456.425411029.pgm  1339072456.457712590.pgm  1339072456.494794369.pgm  1339072456.526060577.pgm  1339072456.559371317.pgm  1339072456.594155888.pgm  1339072456.626693953.pgm  1339072456.661389793.pgm  1339072456.693573239.pgm  1339072456.727987806.pgm  1339072456.762027466.pgm  1339072456.793538935.pgm  1339072456.827261751.pgm  1339072456.864128436.pgm  1339072456.893385048.pgm  1339072456.928423793.pgm  1339072456.965869695.pgm  1339072456.994214761.pgm  1339072457.025262671.pgm  1339072457.062179537.pgm  1339072457.093633243.pgm  1339072457.125321410.pgm  1339072457.161486364.pgm  1339072457.193792165.pgm  1339072457.228163058.pgm  1339072457.263808921.pgm  1339072457.293386976.pgm  1339072457.327049033.pgm  1339072457.361556334.pgm  1339072457.393454191.pgm  1339072457.425271729.pgm  1339072457.461397071.pgm  1339072457.495104986.pgm  1339072457.525420116.pgm  1339072457.565546510.pgm  1339072457.596665372.pgm  1339072457.627688521.pgm  (+210 more)
data/voicerecognition/: bring_me_the_pillow_from_the_bed.raw  bring_the_phone_to_the_diner_table.raw  bring_the_phone_to_the_living_room.raw  can_you_follow_my_mother_to_the_garden.raw  could_you_find_a_glass_in_the_dining_room.raw  find_a_plate.raw  follow_the_person_behind_you.raw  follow_the_person_with_the_blonde_hair_and_the_black_pants_fast.raw  go_to_the_bathroom.raw  go_to_the_bedroom.raw  go_to_the_living_room_and_find_a_drink_for_me.raw  please_move_to_the_fridge.raw  take_my_cell_phone_to_the_bedroom.raw  there_is_a_table_in_the_center_of_the_dining_room.raw  this_is_a_bedroom.raw
res/: BotmarkConfig.h.in  botmark.env.xml  facialrecognition_model.yaml  facialrecognition_training_labels.csv  results.txt  speech_commands.txt  system_details.txt
scripts/: build_project.sh  convert_wav_to_raw.sh  get_system_details.sh  plot_env_results.py  plot_results.py  provision_environment.sh  provision_environment_full.sh  run_benchmark.sh
scripts/installs/: caffe.sh  gmapping.sh  mrpt.sh  opencv.sh  pcl.sh  pocketsphinx.sh  sphinxbase.sh
src/: BotmarkConfig.h  CMakeLists.txt  botmarkcommon.h  facialrecognition.cpp  motionplanning.cpp  objectrecognition.cpp  pathplanning.cpp  persontracking.cpp  slam.cpp  speechsynthesis.cpp  trainFisherface.cpp  voicerecognition.cpp
